fix: add global box-border to fix table overflow from padding

--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,10 @@
 }
 
 @layer base {
+  *, *::before, *::after {
+    box-sizing: border-box;
+  }
+
   html {
     color-scheme: light;
   }
